fix naming rule in views.py : Title --> title

--- a/group/templates/group/viewall.html
+++ b/group/templates/group/viewall.html
@@ -42,10 +42,10 @@ SOFTWARE.
 </head>
 
 <body>
-  <h4>All {{ Title }}</h4>
+  <h4>All {{ title }}</h4>
   <div class="modal-body">
     <div class="input-group">
-      <span class="input-group-addon">search {{ Title }} by id</span>
+      <span class="input-group-addon">search {{ title }} by id</span>
       <input type="text" class="form-control">
       <span class="input-group-btn">
         <button class="btn btn-default btn-sm" type="button">search</button>
@@ -54,7 +54,7 @@ SOFTWARE.
     <br>
     <table class="table table-hover">
       <thead>
-        <th>{{ Title }} title</th>
+        <th>{{ title }} title</th>
         <th>time</th>
       </thead>
       <tbody>
