--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -222,7 +222,11 @@ SOFTWARE.
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <p class="p2">Problem<b class="caret"></b></p>
           </a>
-          <ul class="dropdown-menu" id="volume_num">{{ vol }}</ul>
+          <ul class="dropdown-menu" id="volume_num">
+            {% for i in vol %}
+              <li><a href="#">volume {{ i }}</a></li>
+            {% endfor %}
+          </ul>
         </li>
         <li><a href="/users/submit"><p class="p2">Submit</p></a></li>
         <li><a href="/index/status"><p class="p2">Status</p></a></li>
