modify for remove useless id and add line at manage.py

--- a/group/templates/group/groupList.html
+++ b/group/templates/group/groupList.html
@@ -53,7 +53,7 @@ SOFTWARE.-->
     <div class="span12">
       <div class="form-group">
         <p><a class="btn" href="#" style="float:right">Create &raquo;</a></p>
-          <input class="form-control input-sm" type="text" id="inputSmall" placeholder="Group Name"
+          <input class="form-control input-sm" type="text" placeholder="Group Name"
                  style="float:right">
       </div>
     </div>
@@ -121,7 +121,7 @@ SOFTWARE.-->
         <button type="btn-default" class="close" data-dismiss="modal" aria-hidden="true">
           &times; 
         </button>
-        <h4 class="modal-title" id="myModalLabel">Search</h4>
+        <h4 class="modal-title">Search</h4>
       </div>
       <div class="modal-body">
         <div class="input-group" style="width:90%">
