--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -33,7 +33,7 @@ SOFTWARE.
   <div class="container">
     <!--Title-->
     <div class="well">
-      <h1>{{ contest.name }}</h1>
+      <h1>{{ contest.cname }}</h1>
     </div>
     <div class="panel panel-info">
       <div class="panel-heading">
