--- a/contest/templates/contest/overview.html
+++ b/contest/templates/contest/overview.html
@@ -26,15 +26,15 @@ SOFTWARE.
     </tr>
   </thead>
   <tbody>
-    {% for problem in problem_list %}
+    {% for problem in contest.problem.all %}
     <tr>
-      <td>{{ problem.id }}</td>
-      <td><a href="#">{{ problem.name }}</td>
+      <td>{{ forloop.counter }}</td>
+      <td><a href="#">{{ problem.pname }}</td>
         <td>
           <div class="progress">
             <div name="pass" class="progress-bar progress-bar-success" role="progressbar" 
             aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
-              <span name="pass_ratio">{{ problem.ppl_pass }} / {{ problem.ppl_not_pass|add:problem.ppl_pass }}</span>
+              <span name="pass_ratio"></span>
             </div>
             <div name="not_pass" class="progress-bar progress-bar-danger" role="progressbar"
              aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
