--- a/contest/templates/contest/scoreboard.html
+++ b/contest/templates/contest/scoreboard.html
@@ -23,7 +23,7 @@ SOFTWARE.
     <span class="glyphicon glyphicon-download"></span>
   </button>
 </div>
-<h4>{{ contest.name }}</h4> {% load staticfiles %}
+<h4>{{ contest.cname }}</h4> {% load staticfiles %}
 <script src="{% static 'contest/js/scoreboard.js' %}"></script>
 <link href="{% static 'contest/css/scoreboard.css' %}" rel="stylesheet">
 
@@ -32,8 +32,8 @@ SOFTWARE.
     <tr>
       <th>Rank</th>
       <th>User</th>
-      {% for problem in problem_list%}
-      <th><b data-toggle="tooltip" title="{{ problem.name }}">{{ problem.id }}</b>
+      {% for problem in contest.problem.all %}
+      <th><b data-toggle="tooltip" title="{{ problem.pname }}">{{ forloop.counter }}</b>
       </th>
       {% endfor %}
       <th>Solved</th>
@@ -41,15 +41,17 @@ SOFTWARE.
     </tr>
   </thead>
   <tbody>
-    {% for ppl in contestant_list %}
+    {% for contestant in contestant_list %}
     <tr>
       <td>{{ forloop.counter }}</td>
-      <td>{{ ppl.name }}</td>
-      {% for score in ppl.score %}
+      <td>{{ contestant.user.username }}</td>
+      <!--not yet finished start-->
+      {% for score in contestant.user.score %}
       <td>{{ score }}</td>
       {% endfor %}
-      <td>{{ ppl.solved }}</td>
-      <td>{{ ppl.panalty }}</td>
+      <td>{{ contestant.user.solved }}</td>
+      <td>{{ contestant.user.panalty }}</td>
+      <!--not yet finished end-->
     </tr>
     {% endfor %}
   </tbody>
