--- a/contest/templates/contest/contestArchive.html
+++ b/contest/templates/contest/contestArchive.html
@@ -76,7 +76,7 @@ SOFTWARE.
           </button>
 
           <button type="button" class="btn btn-info btn-xs" data-toggle="modal" 
-          data-target="#contestInfo{{ contest.cname }}">
+          data-target="#contestInfo{{ contest.contest.cname }}">
             <span class="glyphicon glyphicon-pencil"></span>
           </button>
 
@@ -116,7 +116,7 @@ SOFTWARE.
 <!-- /.container -->
 <!-- Contest detail info-->
 {% for contest in contest_list %}
-<div class="modal fade" id="contestInfo{{ contest.cname }}" tabindex="-1" 
+<div class="modal fade" id="contestInfo{{ contest.contest.cname }}" tabindex="-1" 
 role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
