can add contest now

--- a/contest/templates/contest/contestArchive.html
+++ b/contest/templates/contest/contestArchive.html
@@ -53,9 +53,11 @@ SOFTWARE.
       <tr>
         <th>
           {% if admin %}
-          <button type="button" class="btn btn-success btn-xs" data-toggle="modal" data-target="#contestInfo">
-            <span class="glyphicon glyphicon-plus"></span>
-          </button>
+          <a href="new/">
+            <button type="button" class="btn btn-success btn-xs" >
+              <span class="glyphicon glyphicon-plus"></span>
+            </button>
+          </a>
           {% endif %}
         </th>
         <th>#</th>
