use meaningful time period varible instead of constant

--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -255,8 +255,8 @@ SOFTWARE.
     <li class="divider">{{ info2 }}</li>
   </div>
   <div class="temp"  >
-    <input type="text" id='txt' style="width:150px";>
-    <input type="button" style="cursor: pointer;" value="send" 
+    <input type="text" id='txt' style="width:150px;display:none;";>
+    <input type="button" style="cursor: pointer;display:none;" value="send" 
            onclick="sendinfo();">
   </div>  
   {% block body_block %}
