--- a/contest/templates/contest/contestArchive.html
+++ b/contest/templates/contest/contestArchive.html
@@ -101,7 +101,7 @@ SOFTWARE.
           {% endif %}
         </td>
         <td>{{ forloop.counter }}</td>
-        <td><a href="{{ contest.contest.cname }}">{{ contest.contest.cname }}</a>
+        <td><a href="{{ contest.contest.id }}">{{ contest.contest.cname }}</a>
         </td>
         <td>{{ contest.contest.start_time }}</td>
         <td>{{ contest.contest.end_time }}</td>
